# otter

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
docs/: MIGRATION.md  RESOURCES.md  RUSTLER.md  UPGRADE.md  USAGE.md
otter/: Cargo.toml  DESIGN.md
otter/src/: __codegen.rs  abi.rs  alloc.rs  codec.rs  enif.rs  env.rs  lib.rs  priv_data.rs  resource.rs  select.rs  sys.rs  system.rs  term.rs  time.rs
otter/src/types/: DESIGN.md  atom.rs  binary.rs  float.rs  fun.rs  integer.rs  list.rs  map.rs  mod.rs  pid.rs  port.rs  reference.rs  tuple.rs
otter/src/wrapper/: atom.rs  binary.rs  check.rs  env.rs  exception.rs  list.rs  map.rs  mod.rs  monitor.rs  number.rs  pid.rs  port.rs  resource.rs  schedule.rs  select.rs  system.rs  term.rs  time.rs  tuple.rs
otter/tests/: codegen_ui.rs
otter/tests/ui/: fail_init_duplicate_key.rs  fail_init_duplicate_key.stderr  fail_init_mutual_exclusion.rs  fail_init_mutual_exclusion.stderr  fail_init_raw_without_feature.rs  fail_init_raw_without_feature.stderr  fail_init_unknown_key.rs  fail_init_unknown_key.stderr  fail_missing_env.rs  fail_missing_env.stderr  fail_return_not_encoder.rs  fail_return_not_encoder.stderr  pass_init_raw.rs
otter_codegen/: Cargo.toml  DESIGN.md
otter_codegen/src/: init_macro.rs  lib.rs  nif_macro.rs  resource_impl_macro.rs
rebar3_otter/: DESIGN.md  rebar.config
rebar3_otter/src/: rebar3_otter.app.src  rebar3_otter.erl  rebar3_otter__cargo.erl  rebar3_otter__clean.erl  rebar3_otter__compile.erl  rebar3_otter__config.erl  rebar3_otter__new.erl
scripts/: bump-version
test_apps/otter_demo/: .gitignore  README.md  rebar.config
test_apps/otter_demo/_checkouts/: rebar3_otter
test_apps/otter_demo/native/otter_demo/: Cargo.toml
test_apps/otter_demo/native/otter_demo/src/: lib.rs
test_apps/otter_demo/src/: otter_demo.app.src  otter_demo__nif.erl
test_apps/otter_demo/test/: otter_demo__nif_test.erl
