[package]
name = "otter_codegen"
version = "0.1.0"
edition = "2024"
authors = ["Lynn Gabbay"]
license = "MIT OR Apache-2.0"
description = "Procedural macros for the otter Erlang NIF library."
repository = "https://github.com/cubelio/otter"
readme = "../README.md"
keywords = ["erlang", "nif", "beam", "otp", "macros"]
categories = ["api-bindings", "external-ffi-bindings"]

[lib]
proc-macro = true

[features]
# Accept the tier-2 `_raw` load/upgrade/unload callbacks in `init!`. Enabled
# transitively by `otter`'s `raw` feature; without it, `_raw` keys are rejected.
raw = []

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
